Maior destaque dos títulos das informações no modal
Co-authored-by: Pietro Zuntini <pietrozuntini@gmail.com>

--- a/Fase 01 - Web (Front End)/escolas.html
+++ b/Fase 01 - Web (Front End)/escolas.html
@@ -311,31 +311,31 @@
                                             <h6 class="info-card-title">informações de localização</h6>
                                             <ul class="info">
                                                <li class="row">
-                                                   <div class="col">Região:</div>
+                                                   <div class="col"><b>Região</b>:</div>
                                                    <div class="col">Nordeste</div>
                                                </li>
                                                <li class="row">
-                                                    <div class="col">Estado:</div>
+                                                    <div class="col"><b>Estado</b>:</div>
                                                     <div class="col">Maranhão - MA</div>
                                                 </li>
                                                 <li class="row">
-                                                    <div class="col">Mesorregião:</div>
+                                                    <div class="col"><b>Mesorregião</b>:</div>
                                                     <div class="col">Leste Maranhense</div>
                                                 </li>                                                      
                                                 <li class="row">
-                                                    <div class="col">Microrregião:</div>
+                                                    <div class="col"><b>Microrregião</b>:</div>
                                                     <div class="col">Chapadas do Alto do Itaperucu</div>
                                                 </li>
                                                 <li class="row">
-                                                    <div class="col">Município:</div>
+                                                    <div class="col"><b>Município</b>:</div>
                                                     <div class="col">Jenipapo das Vieiras</div>
                                                 </li>                                                      
                                                 <li class="row">
-                                                    <div class="col">Distrito:</div>
+                                                    <div class="col"><b>Distrito</b>:</div>
                                                     <div class="col">Jenipapo das Vieiras</div>
                                                 </li>                                                      
                                                 <li class="row">
-                                                    <div class="col">Localização:</div>
+                                                    <div class="col"><b>Localização</b>:</div>
                                                     <div class="col">Rural</div>
                                                 </li>
                                             </ul>
@@ -345,27 +345,27 @@
                                             <h6 class="info-card-title">ofertas de matrícula</h6>
                                             <ul class="info">
                                                 <li class="row">
-                                                    <div class="col">Creche:</div>
+                                                    <div class="col"><b>Creche</b>:</div>
                                                     <div class="col">Não</div>
                                                 </li>                                                      
                                                 <li class="row">
-                                                    <div class="col">Pré-Escola:</div>
+                                                    <div class="col"><b>Pré-Escola</b>:</div>
                                                     <div class="col">Não</div>
                                                 </li> 
                                                 <li class="row">
-                                                    <div class="col">Ensino Fundamental - 1º ao 4º:</div>
+                                                    <div class="col"><b>Ensino Fundamental - 1º ao 4º</b>:</div>
                                                     <div class="col">Sim</div>
                                                 </li>                                                      
                                                 <li class="row">
-                                                    <div class="col">Ensino Fundamental - 5º ao 8º:</div>
+                                                    <div class="col"><b>Ensino Fundamental - 5º ao 8º</b>:</div>
                                                     <div class="col">Não</div>
                                                 </li>                                                      
                                                 <li class="row">
-                                                    <div class="col">Ensino Médio Normal:</div>
+                                                    <div class="col"><b>Ensino Médio Normal</b>:</div>
                                                     <div class="col">Não</div>
                                                 </li>
                                                 <li class="row">
-                                                    <div class="col">Ensino Média Integrado:</div>
+                                                    <div class="col"><b>Ensino Média Integrado</b>:</div>
                                                     <div class="col">Não</div>
                                                 </li>
                                             </ul>
@@ -375,51 +375,51 @@
                                             <h6 class="info-card-title">dependências da escola</h6>
                                             <ul class="info">
                                                 <li class="row">
-                                                    <div class="col">Sala de Diretoria:</div>
+                                                    <div class="col"><b>Sala de Diretoria:</b></div>
                                                     <div class="col">Não</div>
                                                 </li>                                                      
                                                 <li class="row">
-                                                    <div class="col">Sala de Professores:</div>
+                                                    <div class="col"><b>Sala de Professores:</b></div>
                                                     <div class="col">Não</div>
                                                 </li> 
                                                 <li class="row">
-                                                    <div class="col">Laboratório de Informática:</div>
+                                                    <div class="col"><b>Laboratório de Informática:</b></div>
                                                     <div class="col">Sim</div>
                                                 </li>                                                      
                                                 <li class="row">
-                                                    <div class="col">Laboratório de Ciências:</div>
+                                                    <div class="col"><b>Laboratório de Ciências:</b></div>
                                                     <div class="col">Não</div>
                                                 </li>                                                      
                                                 <li class="row">
-                                                    <div class="col">Quadra de Esportes:</div>
+                                                    <div class="col"><b>Quadra de Esportes:</b></div>
                                                     <div class="col">Não</div>
                                                 </li>
                                                 <li class="row">
-                                                    <div class="col">Biblioteca:</div>
+                                                    <div class="col"><b>Biblioteca:</b></div>
                                                     <div class="col">Não</div>
                                                 </li> 
                                                 <li class="row">
-                                                    <div class="col">Sala de Leitura:</div>
+                                                    <div class="col"><b>Sala de Leitura:</b></div>
                                                     <div class="col">Não</div>
                                                 </li> 
                                                 <li class="row">
-                                                    <div class="col">Parque Infantil:</div>
+                                                    <div class="col"><b>Parque Infantil:</b></div>
                                                     <div class="col">Não</div>
                                                 </li> 
                                                 <li class="row">
-                                                    <div class="col">Bercário:</div>
+                                                    <div class="col"><b>Bercário:</b></div>
                                                     <div class="col">Não</div>
                                                 </li> 
                                                 <li class="row">
-                                                    <div class="col">Secretaria:</div>
+                                                    <div class="col"><b>Secretaria:</b></div>
                                                     <div class="col">Não</div>
                                                 </li> 
                                                 <li class="row">
-                                                    <div class="col">Auditório:</div>
+                                                    <div class="col"><b>Auditório:</b></div>
                                                     <div class="col">Não</div>
                                                 </li> 
                                                 <li class="row">
-                                                    <div class="col">Área Verde:</div>
+                                                    <div class="col"><b>Área Verde:</b></div>
                                                     <div class="col">Não</div>
                                                 </li>
                                             </ul>
@@ -435,27 +435,27 @@
                                             <h6 class="info-card-title">informações gerais</h6>
                                             <ul class="info">
                                                 <li class="row">
-                                                    <div class="col">Situação de Funcionamento:</div>
+                                                    <div class="col"><b>Situação de Funcionamento:</b></div>
                                                     <div class="col">Em Atividade</div>
                                                 </li>
                                                 <li class="row">
-                                                    <div class="col">Início do Ano Letivo:</div>
+                                                    <div class="col"><b>Início do Ano Letivo:</b></div>
                                                     <div class="col">05/02/2018</div>
                                                 </li>
                                                 <li class="row">
-                                                    <div class="col">Término do Ano Letivo:</div>
+                                                    <div class="col"><b>Término do Ano Letivo:</b></div>
                                                     <div class="col">21/12/2018</div>
                                                 </li>                                                      
                                                 <li class="row">
-                                                    <div class="col">Dep. Administrativa:</div>
+                                                    <div class="col"><b>Dep. Administrativa:</b></div>
                                                     <div class="col">Estadual</div>
                                                 </li>
                                                 <li class="row">
-                                                    <div class="col">Qtd. de Salas:</div>
+                                                    <div class="col"><b>Qtd. de Salas:</b></div>
                                                     <div class="col">3</div>
                                                 </li>                                                      
                                                 <li class="row">
-                                                    <div class="col">Qtd. de Funcionários:</div>
+                                                    <div class="col"><b>Qtd. de Funcionários:</b></div>
                                                     <div class="col">7</div>
                                                 </li>
                                             </ul>
@@ -465,19 +465,19 @@
                                             <h6 class="info-card-title">saneamento básico</h6>
                                             <ul class="info">
                                                <li class="row">
-                                                   <div class="col">Água Filtrada:</div>
+                                                   <div class="col"><b>Água Filtrada:</b></div>
                                                    <div class="col">Não</div>
                                                </li>
                                                <li class="row">
-                                                    <div class="col">Esgoto:</div>
+                                                    <div class="col"><b>Esgoto:</b></div>
                                                     <div class="col">Não</div>
                                                 </li>
                                                 <li class="row">
-                                                    <div class="col">Coleta de Lixo:</div>
+                                                    <div class="col"><b>Coleta de Lixo:</b></div>
                                                     <div class="col">Não</div>
                                                 </li>
                                                 <li class="row">
-                                                    <div class="col">Reciclagem:</div>
+                                                    <div class="col"><b>Reciclagem:</b></div>
                                                     <div class="col">Não</div>
                                                 </li>
                                             </ul>
@@ -487,15 +487,15 @@
                                             <h6 class="info-card-title">alimentação</h6>
                                             <ul class="info">
                                                <li class="row">
-                                                   <div class="col">Alimentação:</div>
+                                                   <div class="col"><b>Alimentação:</b></div>
                                                    <div class="col">Não</div>
                                                </li>
                                                <li class="row">
-                                                    <div class="col">Cozinha:</div>
+                                                    <div class="col"><b>Cozinha:</b></div>
                                                     <div class="col">Não</div>
                                                 </li>
                                                 <li class="row">
-                                                    <div class="col">Refeitório:</div>
+                                                    <div class="col"><b>Refeitório:</b></div>
                                                     <div class="col">Não</div>
                                                 </li>                                                      
                                             </ul>
@@ -505,11 +505,11 @@
                                             <h6 class="info-card-title">moradia</h6>
                                             <ul class="info">
                                                <li class="row">
-                                                   <div class="col">Alojamento para Alunos:</div>
+                                                   <div class="col"><b>Alojamento para Alunos:</b></div>
                                                    <div class="col">Não</div>
                                                </li>
                                                <li class="row">
-                                                    <div class="col">Alojamento para Professores:</div>
+                                                    <div class="col"><b>Alojamento para Professores:</b></div>
                                                     <div class="col">Não</div>
                                                 </li>                                                    
                                             </ul>
@@ -519,7 +519,7 @@
                                             <h6 class="info-card-title">acesso à internet</h6>
                                             <ul class="info">
                                                <li class="row">
-                                                   <div class="col">Internet:</div>
+                                                   <div class="col"><b>Internet:</b></div>
                                                    <div class="col">Não</div>
                                                </li>
                                             </ul>
